force-app/main/default/objects/File_Upload_Log__c/File_Upload_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for file uploads via the Dynamic File Uploader component</description>
    <label>File Upload Log</label>
    <nameField>
        <displayFormat>UPL-{000000}</displayFormat>
        <label>Upload Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Upload Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>