force-app/main/default/objects/File_Upload_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <description>Summary of errors encountered during upload</description>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>