force-app/main/default/objects/File_Upload_Log__c/fields/Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Field_Mappings__c</fullName>
    <description>JSON snapshot of the column-to-field mappings used</description>
    <label>Field Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>