force-app/main/default/objects/File_Upload_Log__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Name of the uploaded file</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>