force-app/main/default/objects/File_Upload_Log__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the Salesforce object records were created in</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>