force-app/main/default/objects/File_Upload_Log__c/fields/Upload_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Upload_DateTime__c</fullName>
    <description>Date and time when the upload was processed</description>
    <label>Upload Date/Time</label>
    <type>DateTime</type>
</CustomField>