force-app/main/default/objects/File_Upload_Log__c/fields/Upload_Mode__c.field-meta.xml
<CustomField>
    <fullName>Upload_Mode__c</fullName>
    <description>Which upload workflow was used</description>
    <label>Upload Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>