force-app/main/default/objects/File_Upload_Log__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <description>User who performed the upload</description>
    <label>Uploaded By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>